2011-01-07  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/StreamingDMCS.h: Give StreamingDMCS the master power.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/Handler.h: Likewise.
	* include/dmcs/StreamingCommandType.h: Likewise.

	* include/mcs/ProxySignatureByLocal.h: Let the references refer to
	stable sigs.

	* include/dmcs/BaseDMCS.h: Move createGuessingSignature to the
	base class.
	* src/dmcs/PrimitiveDMCS.cpp: Likewise.
	* src/dmcs/OptDMCS.cpp: Likewise.
	* src/dmcs/BaseDMCS.cpp: Likewise.
	* include/dmcs/PrimitiveDMCS.h: Likewise.
	* include/dmcs/OptDMCS.h: Likewise.

2011-01-07  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/parser/ClaspResultBuilder.tcc: Fix BeliefSet instantiation.
	* testsuite/testBeliefComparison.cpp: Likewise.

	* include/network/Handler.tcc: Check for errors in the ASIO
	call-back methods.
	* src/network/Server.cpp: Likwise.

	* include/dmcs/CommandTypeFactory.h: Fix some compiler warnings.
	* src/dyndmcs/DynamicConfiguration.cpp: Likewise.
	* include/dyndmcs/Instantiator.h: Likewise.
	* include/dyndmcs/InstantiateBackwardMessage.h: Likewise.
	* include/dyndmcs/ChosenCtxSortingStrategy.h: Likewise.
	* include/dyndmcs/BaseSortingStrategy.h: Likewise.

2011-01-06  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/solver/RelSatSolver.h: Responsible to convert relsat's
	model into BeliefState format.
	* src/solver/RelSatSolver.cpp: Likewise.

	* src/dmcs/OptDMCS.cpp: Add a remark.

	* include/solver/SatSolverFactory.h: Add query_plan.

	* include/solver/RelSatSolver.h: create guessing signature
	here. Need to rethink where to put this.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/network/ThreadFactory.h: Add system_size.